<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:enabled="true"
        android:title="@string/home"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/profil"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/wishlist"
        android:title="@string/whist_list"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_wish_list"></item>
    <item
        android:id="@+id/kpr"
        android:icon="@drawable/ic_kpr"
        android:title="@string/kpr"
        app:showAsAction="ifRoom"></item>

</menu>