<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rumahkpr.akses.aksesrumahkpr.fragment.SimulasikprFragment"
    android:padding="@dimen/paddingSmall">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginBottom="10dp"
        android:padding="@dimen/paddingSmallest">
        <TextView
            android:text="@string/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/textMedium"
            android:textColor="@color/darkGray"/>
        <EditText
            android:id="@+id/namaSimulasi"
            android:text="Bintaro Parkview"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:enabled="false"
            android:padding="@dimen/paddingSmaller"
            android:background="@null"
            android:textSize="@dimen/textMedium"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginBottom="10dp"
        android:padding="@dimen/paddingSmallest">
        <TextView
            android:text="@string/harga_beli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/textMedium"
            android:textColor="@color/darkGray"/>
        <EditText
            android:id="@+id/hargaSimulai"
            android:text="Rp. 850,000,000,-"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:enabled="false"
            android:background="@null"
            android:padding="@dimen/paddingSmaller"
            android:textSize="@dimen/textMedium"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginBottom="10dp"
        android:padding="@dimen/paddingSmallest">
        <TextView
            android:text="@string/uang_muka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/textMedium"
            android:textColor="@color/darkGray"/>
        <EditText
            android:id="@+id/uangMuka"
            android:hint="Rp. 42,000,000,-"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="right"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:padding="@dimen/paddingSmaller"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/textMedium"
            android:inputType="number"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginBottom="10dp"
        android:padding="@dimen/paddingSmallest">
        <TextView
            android:text="@string/suku_bunga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/textMedium"
            android:textColor="@color/darkGray"/>
        <EditText
            android:id="@+id/sukuBungaPtahun"
            android:hint="9 % per Tahun"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="right"
            android:background="@null"
            android:textSize="@dimen/textMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:padding="@dimen/paddingSmaller"
            android:textColorHint="@color/gray"
            android:inputType="number"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginBottom="10dp"
        android:padding="@dimen/paddingSmallest">
        <TextView
            android:text="@string/lama_pinjaman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/textMedium"
            android:textColor="@color/darkGray"/>
        <EditText
            android:id="@+id/lamaPinjaman"
            android:hint="@string/_120_bulan"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="right"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:padding="@dimen/paddingSmaller"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/textMedium"
            android:inputType="number"
            android:maxLength="2"
            android:imeOptions="actionDone"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginBottom="10dp"
        android:padding="@dimen/paddingSmallest">
        <TextView
            android:text="Angsuran Perbulan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/textMedium"
            android:textColor="@color/darkGray"/>
        <EditText
            android:id="@+id/masaKredit"
            android:hint="-"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:padding="@dimen/paddingSmaller"
            android:background="@null"
            android:textColorHint="@color/gray"
            android:enabled="false"
            android:textSize="@dimen/textMedium"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>
</LinearLayout>
